# gphoto-get

./: .gitignore  LICENSE  README.md  build.sh  gphoto_get.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_integration.py
