[project]
name = "gphoto-get"
version = "0.1.0"
description = "Google Photos Shared Album Downloader"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "justhtml",
    "rich",
]

[project.scripts]
gphoto-get = "gphoto_get:main"

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
